--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <ul>
           <li><a href="index.html">Home Page</a></li>
           <li><a href="portfolio.html">Portfolio</a></li>
-          <li><a href="about.html">About Me</a></li>          
+          <li><a href="about.html">About</a></li>          
         </ul>
         <ol>Favorite Sports 
             <li> Basketball </li>
